Fixes & improvements to README + extensive .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,16 @@
-
+# System Cruft
+# ================================================
 .DS_Store
+*.swp
+*.swo
+
+# secret stuff
+# ================================================
 secrets.json
+
+# Generated stuff
+# ================================================
+build/*
 node_modules/*
+
+
